test/errors/error42.vult

fun foo(x) {
  val x;
  x[0] = 1.0;
  val y = tanh(x);
}
